--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -9,11 +9,11 @@ const {} = Astro.props;
     <div
             class="relative overflow-hidden bg-brand-pale px-6 py-20 shadow-xl sm:rounded-3xl sm:px-10 sm:py-24 md:px-12 lg:px-20">
         <img class="absolute inset-0 h-full w-full object-cover"
-             src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80"
-             alt="">
+             src="/assets/testimonial-bg.jpg"
+             alt="CryptoMondays Zurich community background">
         <div class="absolute inset-0 bg-brand-navy/60 mix-blend-multiply"></div>
         <div class="relative mx-auto max-w-2xl lg:mx-0">
-            <img class="h-12 w-auto" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
+            <img class="h-20 w-auto sm:h-24" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
             <figure>
                 <blockquote class="mt-6 text-lg font-semibold text-white sm:text-xl sm:leading-8">
                     <p>“the heart of every great community lies in balance
