--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -13,11 +13,11 @@ const {} = Astro.props;
              alt="CryptoMondays Zurich community background">
         <div class="absolute inset-0 bg-brand-navy/60 mix-blend-multiply"></div>
         <div class="relative mx-auto max-w-2xl lg:mx-0">
-            <img class="h-20 w-auto sm:h-24" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
+            <img class="h-40 w-auto sm:h-48" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
             <figure>
                 <blockquote class="mt-6 text-lg font-semibold text-white sm:text-xl sm:leading-8">
-                    <p>“the heart of every great community lies in balance
-                        where we give generously and receive even more in return.”</p>
+                    <p>“The heart of every great community lies in balance
+                        where you give generously and receive even more in return.”</p>
                 </blockquote>
                 <figcaption class="mt-6 text-base text-white">
                     <div class="font-semibold">Lou Kerner</div>
