--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -13,7 +13,7 @@ const {} = Astro.props;
              alt="CryptoMondays Zurich community background">
         <div class="absolute inset-0 bg-brand-navy/60 mix-blend-multiply"></div>
         <div class="relative mx-auto max-w-2xl lg:mx-0">
-            <img class="h-40 w-auto sm:h-48" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
+            <img class="h-40 w-auto sm:h-48 inline-block" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
             <figure>
                 <blockquote class="mt-6 text-lg font-semibold text-white sm:text-xl sm:leading-8">
                     <p>“The heart of every great community lies in balance
