--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -13,10 +13,10 @@ const {} = Astro.props;
     </div>
     <div class="mx-auto max-w-2xl text-center">
         <h2 class="text-3xl font-bold tracking-tight text-brand-navy sm:text-4xl">
-            Boost your productivity,<br/> start using our communication app.
+            Join the Team. Build the Community.<br/> If you’ve made it this far, you’re already one of us.
         </h2>
-        <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-brand-navy/80">Incididunt sint fugiat pariatur cupidatat
-            consectetur sit cillum anim id veniam aliqua proident excepteur commodo do ea.</p>
+        <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-brand-navy/80">At CryptoMondays Zurich, our only filter is attitude and positive vibes — skills can always be learned.
+            Reach out to any team member or send us a message with your skills and how you’d like to contribute. Let’s build together.</p>
         <div class="mt-10 flex items-center justify-center gap-x-6">
             <a href="#"
                class="rounded-md bg-brand-vivid px-3.5 py-2.5 border border-brand-vivid text-sm font-semibold text-white shadow-sm transition-colors hover:bg-brand-bold focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand-bold">
