--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -8,13 +8,13 @@ const {} = Astro.props;
 <div class="mx-auto mt-12 max-w-7xl px-6 sm:mt-32 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
         <h2 class="text-base font-semibold leading-7">
-            <span class="bg-brand-navy text-white px-4 py-1 rounded-full">About CryptoMondays Zurich</span>
+            <span class="bg-brand-navy text-white px-4 py-1 rounded-full">About CryptoMondays Zürich</span>
         </h2>
         <p class="mt-2 text-3xl font-roboto tracking-tight text-brand-navy sm:text-4xl">
             A global force across 50+ cities, building the future of crypto and Web3 together
         </p>
         <p class="mt-6 text-lg leading-8 font-nunito text-brand-navy/80">
-            Grounded in Zurich’s vibrant ecosystem, we unite curious minds 
+            Grounded in Zürich’s vibrant ecosystem, we unite curious minds 
             to drive connection, collaboration, and meaningful change.
         </p>
     </div>
@@ -37,7 +37,7 @@ const {} = Astro.props;
                 </dt>
                 <dd class="mt-2 text-base leading-7 text-brand-navy/80">
                     Since 2022, our monthly events have brought together over 3,000 members, 
-                    building Zurich’s most active crypto and Web3 network.
+                    building Zürich’s most active crypto and Web3 network.
                 </dd>
             </div>
             <div class="relative pl-16">
@@ -89,7 +89,7 @@ const {} = Astro.props;
                 </dt>
                 <dd class="mt-2 text-base leading-7 text-brand-navy/80">
                     Fueled by passion and purpose, our board and core team are volunteers committed 
-                    to growing Zurich’s crypto community.
+                    to growing Zürich’s crypto community.
                 </dd>
             </div>
         </dl>
