--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,7 +29,7 @@ const {} = Astro.props;
                                     </svg>
                                 </a>
                                 <a
-                                    href="https://www.meetup.com/es/cryptomondays-zurich/"
+                                    href="https://www.meetup.com/es/cryptomondays-Zürich/"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     class="inline-flex items-center space-x-2 text-sm font-medium leading-6 text-brand-navy/80"
@@ -47,7 +47,7 @@ const {} = Astro.props;
                         <h1 class="mt-8 text-4xl font-roboto tracking-tight text-brand-navy sm:text-6xl">
                             Switzerland’s most active blockchain, crypto &amp; Web3 community
                         </h1>
-                        <p class="mt-6 text-lg text-brand-navy/80">From local meetups to global reach! CryptoMondays Zurich connects our community through online webinars and in-person events alike.
+                        <p class="mt-6 text-lg text-brand-navy/80">From local meetups to global reach! CryptoMondays Zürich connects our community through online webinars and in-person events alike.
                         </p>
                         <div class="mt-8 flex items-center gap-x-6">
                             <a href="#"
@@ -66,7 +66,7 @@ const {} = Astro.props;
                 <img id="image"
                      class="rounded-xl top-0 left-0 w-full h-auto opacity-0 transition-opacity duration-1000 ease-in-out"
                      src="/assets/hero-photo-1.png"
-                     alt="CryptoMondays Zurich community event"/>
+                     alt="CryptoMondays Zürich community event"/>
                 <div class="absolute top-6 right-6 rounded-bl-xl p-4 bg-brand-pale">
                     <svg class="h-2 w-2 inline fill-brand-bold mr-2" viewBox="0 0 6 6" aria-hidden="true">
                         <circle cx="3" cy="3" r="3"/>
