--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -10,7 +10,7 @@ const {} = Astro.props;
             class="relative overflow-hidden bg-brand-pale px-6 py-20 shadow-xl sm:rounded-3xl sm:px-10 sm:py-24 md:px-12 lg:px-20">
         <img class="absolute inset-0 h-full w-full object-cover"
              src="/assets/testimonial-bg.jpg"
-             alt="CryptoMondays Zurich community background">
+             alt="CryptoMondays Zürich community background">
         <div class="absolute inset-0 bg-brand-navy/60 mix-blend-multiply"></div>
         <div class="relative mx-auto max-w-2xl lg:mx-0">
             <figure>
