--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Contact from '../components/Contact.astro';
 ---
 
-<Layout title="Welcome to Astro - Planetario template.">
+<Layout title="Welcome to CryptoMondays Zürich">
 
     <Contact/>
 
