--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -3,7 +3,7 @@ import { ViewTransitions, fade } from "astro:transitions";
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro - Planetario template.">
+<Layout title="Welcome to CryptoMondays Zürich">
 
     <!-- Blog section -->
     <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-40 lg:px-8">
