--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,63 +7,32 @@ const {} = Astro.props;
 <footer aria-labelledby="footer-heading" class="relative border-t border-brand-soft/60 py-24 sm:py-32">
     <h2 id="footer-heading" class="sr-only">Footer</h2>
     <div class="xl:grid xl:grid-cols-3 xl:gap-8">
-        <img class="h-7" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich">
+        <img class="h-7" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zürich">
         <div class="mt-16 grid grid-cols-2 gap-8 xl:col-span-2 xl:mt-0">
             <div class="md:grid md:grid-cols-2 md:gap-8">
                 <div>
-                    <h3 class="text-sm font-semibold leading-6 text-brand-navy">Solutions</h3>
+                    <h3 class="text-sm font-semibold leading-6 text-brand-navy">Social Media</h3>
                     <ul role="list" class="mt-6 space-y-4">
                         <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Chat bots</a>
+                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Linkedin</a>
                         </li>
                         <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Calls</a>
+                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">X</a>
                         </li>
                         <li>
                             <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">
-                                Video calls
+                                Luma
                             </a>
                         </li>
                         <li>
                             <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">
-                                Chats
+                                MeetUp
                             </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="mt-10 md:mt-0">
-                    <h3 class="text-sm font-semibold leading-6 text-brand-navy">Support</h3>
-                    <ul role="list" class="mt-6 space-y-4">
-                        <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Pricing</a>
-                        </li>
-                        <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Documentation</a>
-                        </li>
-                        <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Guides</a>
-                        </li>
-                        <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">API Reference</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="md:grid md:grid-cols-2 md:gap-8">
-                <div>
-                    <h3 class="text-sm font-semibold leading-6 text-brand-navy">Company</h3>
-                    <ul role="list" class="mt-6 space-y-4">
-                        <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">About</a>
-                        </li>
-                        <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Blog</a>
-                        </li>
-                        <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Jobs</a>
-                        </li>
-                    </ul>
-                </div>
                 <div class="mt-10 md:mt-0">
                     <h3 class="text-sm font-semibold leading-6 text-brand-navy">Legal</h3>
                     <ul role="list" class="mt-6 space-y-4">
