--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import FAQ from '../components/Faq.astro';
 import CTA from '../components/CTA.astro';
 ---
 
-<Layout title="Welcome to Astro - Planetario template.">
+<Layout title="Welcome to CryptoMondays Zürich">
 
     <!-- Hero section -->
     <Hero/>
